--- a/GameBreakersDBManagement/Properties/Resources.resx
+++ b/GameBreakersDBManagement/Properties/Resources.resx
@@ -139,4 +139,7 @@
   <data name="NHL_Logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\05_NHL_Shield.svg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="The_Cardboard_Connection" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\The-Cardboard-Connection.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
